@@ -1,3 +1,10 @@
+2005-12-17  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+
+	* floatformat.c (floatformat_i387_ext_is_valid): Use explicit cast
+	to convert from "from".
+	(floatformat_to_double): Likewise.
+	(floatformat_from_double): Use explicit cast to convert from "to".
+
 2005-12-10  Terry Laurenzo  <tlaurenzo@gmail.com>
 
 	PR java/9861
